add github link to page

--- a/src/styles/styles.styl
+++ b/src/styles/styles.styl
@@ -15,9 +15,19 @@ body
 p
   margin 0
 
+a
+  color initial
+
 #time
   font-size 2rem
   cursor pointer
+
+#source
+  position fixed
+  bottom 0
+  margin-bottom 10px
+
+  font-size 20px
 
 #tooltip
   position fixed
