--- a/src/styles/styles.styl
+++ b/src/styles/styles.styl
@@ -2,9 +2,6 @@ html
   font-family 'Minecraft'
   font-size 40px
 
-  --background white
-  --foreground black
-
   @media screen and (max-width 600px)
     font-size 20px
 
@@ -15,14 +12,11 @@ body
   justify-content center
   align-items center
 
-  background-color var(--background)
-  color var(--foreground)
-
 p
   margin 0
 
 a
-  color initial
+  color inherit
 
 #time
   font-size 2rem
