draw stars with canvas

--- a/src/styles/sky.styl
+++ b/src/styles/sky.styl
@@ -5,12 +5,18 @@ day()
   color black
   background-image linear-gradient($day-top 10%, $day-bottom 20%, $day-bottom 100%)
 
+  #stars
+    opacity 0
+
 night()
   $night-top = #010103
   $night-bottom = #0c0d17
 
   color white
   background-image linear-gradient($night-top 10%, $night-bottom 40%, $night-bottom 100%)
+
+  #stars
+    opacity .9
 
 dusk()
   $dusk-top = #38415e
@@ -19,12 +25,18 @@ dusk()
   color #ffff7e
   background-image linear-gradient($dusk-top 10%, $dusk-bottom 50%, $dusk-bottom 100%)
 
+  #stars
+    opacity .7
+
 dawn()
   $dawn-top = #586fa1
   $dawn-bottom = #db753a
 
   color #ffe
   background-image linear-gradient($dawn-top 10%, $dawn-bottom 50%, $dawn-bottom 100%)
+
+  #stars
+    opacity .6
 
 html
   &.day
@@ -38,3 +50,13 @@ html
 
   &.dawn
     dawn()
+
+#stars
+  opacity .5
+
+  position fixed
+  top 0
+  left 0
+  right 0
+  bottom 0
+  z-index -10
